// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonLink /> renders correctly \`disabled\` 1`] = `
<DocumentFragment>
  <a
    class="btn btnSecondary btnLg disabled"
    disabled=""
    href=""
    role="button"
    tabindex="-1"
  >
    Button link
  </a>
</DocumentFragment>
`;

exports[`<ButtonLink /> renders correctly anchor attributes 1`] = `
<DocumentFragment>
  <a
    aria-label="SourceGraph.com"
    class="btn btnSecondary btnLg"
    data-pressed="true"
    data-tooltip="SourceGraph.com"
    href="https://sourcegraph.com"
    tabindex="0"
  >
    Button link
  </a>
</DocumentFragment>
`;

exports[`<ButtonLink /> renders correctly btn classes 1`] = `
<DocumentFragment>
  <a
    class="btn btnSecondary btnLg"
    href="http://example.com"
    tabindex="0"
  >
    Button link
  </a>
</DocumentFragment>
`;

exports[`<ButtonLink /> renders correctly empty \`to\` 1`] = `
<DocumentFragment>
  <a
    class="btn btnSecondary btnLg"
    href=""
    role="button"
    tabindex="0"
  >
    Button link
  </a>
</DocumentFragment>
`;
